# mcp-mysql-gateway

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.github/workflows/: docker.yml
src/: auth.rs  config.rs  lib.rs  logging.rs  main.rs  router.rs  state.rs
src/mcp/: http_service.rs  mod.rs  mysql_mcp.rs
