[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
axum = "0.8.9"
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
futures = "0.3.32"
rmcp = { version = "1.8.0", features = ["server", "server-side-http", "transport-streamable-http-server", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "mysql", "tls-rustls", "chrono", "rust_decimal", "json"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2"
schemars = "1.2.1"
urlencoding = "2.1"
